Add canonical link.

--- a/circle/index.html
+++ b/circle/index.html
@@ -2,20 +2,21 @@
   <head>
     <meta charset="utf-8">
     <title>Trump's Circle of Death</title>
-    <meta name="author" content="Kent Brewster">
-    <meta name="description" content="If you laid every American who died from COVID-19 in a circle around Trump Tower, this is how big it would be.">
-    <meta name="viewport" content="width=480, initial-scale=auto">
+    <link rel="canonical" href="https://deathcount.us/circle/" />
+    <link rel="shortcut icon" href="favicon.gif" type="image/gif" />
+    <meta name="author" content="Kent Brewster" />
+    <meta name="description" content="If you laid every American who died from COVID-19 in a circle around Trump Tower, this is how big it would be." />
+    <meta name="viewport" content="width=480, initial-scale=auto" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@kentbrew" />
     <meta property="twitter:title" content="Trump's Circle of Death" />
     <meta property="twitter:description" content="If you laid every American who died from COVID-19 in a circle around Trump Tower, this is how big it would be." />
-    <meta name="twitter:image" content="https://deathcount.us/circle/twitter.jpg">
+    <meta name="twitter:image" content="https://deathcount.us/circle/twitter.jpg" />
     <meta property="og:url" content="http://deathcount.us/circle/" />
     <meta property="og:title" content="Trump's Circle of Death" />
     <meta property="og:description" content="If you laid every American who died from COVID-19 in a circle around Trump Tower, this is how big it would be." />
     <meta property="og:image" content="https://deathcount.us/circle/og.jpg" />
     <meta property="og:type" content="website" />
-    <link rel="shortcut icon" href="favicon.gif" type="image/gif">
     <style>
       body {
         text-align: center;
