Add the actual date of the next election.

--- a/circle/index.html
+++ b/circle/index.html
@@ -181,7 +181,7 @@
           ${getPlural("hour", until.hours)},
           ${getPlural("minute", until.minutes)},
           and ${getPlural("second", until.seconds)}
-          remain until the next election.</p>`;
+          remain until the next election, 3 November 2020.</p>`;
         window.setTimeout(updateCounter, 1000);
       },
       // render maps 
