Fix viewport meta
Also update mostRecent count

--- a/circle/index.html
+++ b/circle/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-title" content="deathcount" />
     <meta name="author" content="Kent Brewster" />
     <meta name="description" content="If you laid every American who died from COVID-19 in a circle around Trump Tower, this is how big it would be." />
-    <meta name="viewport" content="width=480, initial-scale=auto" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@kentbrew" />
     <meta property="twitter:title" content="Trump's Circle of Death" />
@@ -77,8 +77,8 @@
     <script>
       // in case we don't get data
       const mostRecent = {
-        date: "13 May 2020",
-        dead: 82246,
+        date: "22 Jun 2020",
+        dead: 119923
       },
       // 
       bounds = [75000, 150000, 300000, 600000, 1200000, 2400000, 4800000],
