--- a/circle/index.html
+++ b/circle/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -31,9 +32,14 @@
         color: #ff0;
         text-decoration: none;
       }
+      h1 {
+        padding: 0;
+      }
       span.bignum {
         display: block;
         font-size: 16vw;
+        line-height: 20vw;
+        padding: 0;
       }
       div.tile {
         display: inline-block;
@@ -69,27 +75,30 @@
   </head>
   <body>
     <h1>Trump's Circle of Death</h1>
+    <div id="note"></div>
     <div id="hd"></div>
+    <div id="text"></div>
     <div id="bd"></div>
     <p id="ct"></p>
-    <p>Had enough? Check with <a href="https://vote.org" target="_blank">Vote.org</a> to be sure your voice is heard.</p>
     <div id="ft">
       <a href="https://github.com/kentbrew/deathcount/blob/master/README.md" target="_blank">About</a> - 
-      <a href="https://www.coronatracker.com/country/united-states/" target="_blank">Data</a> - 
-      <a href="https://twitter.com/kentbrew" target="_blank">Contact</a> - 
+      <a href="https://www.worldometers.info/coronavirus/country/us/" target="_blank">Data</a> - 
+      <a href="https://bsky.app/profile/kentbrew.bsky.social" target="_blank">Contact</a> - 
       <a href="https://neocities.org" target="_blank">Hosting</a>
     </div>
     <script>
-      // in case we don't get data
+      // this number from https://www.nber.org/papers/w33465
       const mostRecent = {
-        date: "30 Aug 2020",
-        dead: 186883
+        dead: 1700000,
+        retrieved: "2025-02-23"
       },
       // 
       bounds = [75000, 150000, 300000, 600000, 1200000, 2400000, 4800000],
       hd = document.getElementById('hd'),
       bd = document.getElementById('bd'),
       ct = document.getElementById('ct'),
+      text = document.getElementById('text'),
+      note = document.getElementById('note'),
       // a list of properties for which we're going to draw a map. Each needs a name, latitude, and a map ID
       // maps will appear on the page in the order they appear in this array
       properties = [ {
@@ -188,11 +197,12 @@
         dH = ~~(dM / 60),
         dD = ~~(dH / 24);
         return {
-          days: dD,
-          hours: dH % (dD * 24),
-          minutes: dM % (dH * 60),
-          seconds: dS % (dM * 60)
+          days: dD || 0,
+          hours: dH % (dD * 24) || 0,
+          minutes: dM % (dH * 60) || 0,
+          seconds: dS % (dM * 60) || 0
         };
+        
       },
       // add "s" to noun when needed
       getPlural = (noun, count) => {
@@ -202,19 +212,10 @@
         }
         return `${count} ${noun}${suffix}`;
       },
-      // update the counter
-      updateCounter = () => {
-        until = howLong("Nov 3, 2020");
-        ct.innerHTML = `${getPlural("day", until.days)},
-          ${getPlural("hour", until.hours)},
-          ${getPlural("minute", until.minutes)},
-          and ${getPlural("second", until.seconds)}
-          remain until the next election, 3 November 2020.</p>`;
-        window.setTimeout(updateCounter, 1000);
-      },
       // render maps 
-      render = dead => {
+      render = (dead, info) => {
         let circ = "";
+        bd.innerHTML = "";
         properties.filter((prop) => {
           let zar = getZoomAndRadiusFor(dead, prop.lat);
           let tile = makeMap(zar.zoomLevel, prop.map, prop.name);
@@ -222,34 +223,23 @@
           tile.getElementsByClassName('map')[0].appendChild(makeCircle(zar.radius));
           bd.appendChild(tile);
         });
-        hd.innerHTML += `<p><span class="bignum">${formatNumber(dead)}</span> Americans <a href="https://www.coronatracker.com/country/united-states/" target="_blank">have died of COVID-19</a> on Donald Trump's watch so far.</p>
+        note.innerHTML = info;
+        hd.innerHTML = `<span class="bignum">${formatNumber(dead)}</span>`;
+        text.innerHTML = `<p>Americans <a href="https://www.nber.org/papers/w33465" target="_blank">have died of COVID-19</a> due to Donald Trump's malicious neglect.</p>
           <p>If you laid them out head to toe, they would make a circle ${circ} miles around.</p>
           <p>Here's what that ${circ}-mile circle would look like around some Trump properties.</p>`;
-        updateCounter();
+        // save to local storage so our instance has a fresher count if the API gums up later
+        window.localStorage.setItem('mostRecentDead', dead);
       },
       // let's get this party started
       init = () => {
-        // Fetch the data
-        fetch('https://api.coronatracker.com/v3/stats/worldometer/country?countryCode=US')
-          // Massage the result
-          .then(response => response.json())
-          // Hand it off for processing
-          .then(result => {
-            let found = false;
-            if (result[0] && result[0].totalDeaths) {
-              render(result[0].totalDeaths);
-              found = true;
-            }
-            return found;
-          }).then(found => {
-            if (!found) {
-              hd.innerHTML = "<p>Having trouble getting data, so here's what we saw on " + mostRecent.date + ".</p>";
-              render(mostRecent.dead);
-            }
-          }).catch(error => {
-            console.log(error);
-            render(mostRecent.dead)
-          });
+        // mostRecent already has an old number from init
+        if (localStorage.mostRecentDead) {
+          // mostRecent.dead = localStorage.mostRecentDead;
+        }
+        // any render will save mostRecentDead to localStorage
+        render(mostRecent.dead, `<p>Data from <a href="https://www.nber.org/papers/w33465">the National Bureau of Economic Research</a>.</p>`);
+
       };
         
       // kick it off
